[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Docs"
version = "0.9.0"
dependencies = [
    "jupyter-book",
    "pyvista[all]>=0.43.0",
    "fenics-dolfinx>=0.9.0",
    "ipyparallel",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython", "jupytext", "ruff", "pre-commit"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["numpy"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
