[build-system]
requires = ["setuptools>=64.4.0", "wheel", "pip>=22.3"]
build-backend = "setuptools.build_meta"

[project]
name = "DOLFINx_Docs"
version = "0.10.0"
dependencies = [
    "jupyter-book<2.0.0",
    "pyvista[all]>=0.45.0",
    "fenics-dolfinx>=0.10.0,<0.11.0",
    "ipyparallel",
    "ipykernel<7.0.0",
]

[project.optional-dependencies]
dev = ["pdbpp", "ipython", "jupytext", "ruff", "pre-commit"]

[tool.setuptools]
packages = []


[tool.jupytext]
formats = "ipynb,py:percent"


[tool.ruff.lint.isort]
known-first-party = ["basix", "dolfinx", "ffcx", "ufl"]
known-third-party = ["numpy"]
section-order = [
    "future",
    "standard-library",
    "mpi",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"mpi" = ["mpi4py", "petsc4py"]
